# mmpose

./: MANIFEST.in  pyproject.toml
docs/en/: conf.py
docs/zh_cn/: conf.py
mmpose/: __init__.py
mmpose/models/necks/: posewarper_neck.py
mmpose/utils/: collect_env.py
