[build-system]
requires = ["setuptools", "numpy", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpose"
version = "1.3.2"
description = "OpenMMLab Pose Estimation Toolbox and Benchmark."
readme = "README.md"
authors = [
    {name = "MMPose Contributors", email = "openmmlab@gmail.com"}
]
keywords = ["computer vision", "pose estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]
urls = { "Homepage" = "https://github.com/open-mmlab/mmpose" }
license = {text = "Apache License 2.0"}
requires-python = ">=3.13"
dependencies = [
    "chumpy",
    "importlib",
    "json_tricks",
    "matplotlib",
    "mmcv @ git+https://github.com/dennuguyen/mmcv.git",
    "mmengine @ git+https://github.com/dennuguyen/mmengine.git",
    "munkres",
    "numpy",
    "opencv-python",
    "pillow",
    "scipy",
    "torchvision",
    "xtcocotools @ git+https://github.com/dennuguyen/xtcocoapi.git"
]

[project.optional-dependencies]
tests = [
    "coverage",
    "flake8",
    "interrogate",
    "isort==4.3.21",
    "parameterized",
    "pytest",
    "pytest-runner",
    "xdoctest>=0.10.0",
    "yapf"
]
optional = [
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["configs", "tools", "demo"]

[tool.setuptools.package-data]
"mmpose.ops" = ["*/*.so"]

[tool.setuptools]
py-modules = [ "mmpose" ]
include-package-data = true
zip-safe = false
